// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots QuestionSlider Default 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "paddingHorizontal": 20,
      },
      undefined,
    ]
  }
  testID="question-slider"
>
  <Text
    style={
      Array [
        Object {
          "fontSize": 25,
          "fontWeight": "700",
          "textAlign": "center",
        },
        Object {
          "color": "red",
        },
      ]
    }
    testID="slider-value"
  >
    10
  </Text>
  <RCTSlider
    disabled={false}
    enabled={true}
    maximumValue={100}
    minimumTrackTintColor="red"
    minimumValue={0}
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onSlidingComplete={[Function]}
    onStartShouldSetResponder={[Function]}
    onValueChange={[Function]}
    step={10}
    style={
      Object {
        "height": 40,
      }
    }
    testID="slider"
    value={10}
  />
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-around",
      }
    }
    testID="slider-values-container"
  >
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "flex": 1,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#14171A",
            "fontSize": 15,
            "fontWeight": "500",
            "textAlign": "center",
          }
        }
        testID="slider-min-value"
      >
        0
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flex": 1,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#14171A",
            "fontSize": 15,
            "fontWeight": "500",
            "textAlign": "center",
          }
        }
        testID="slider-max-value"
      >
        100
      </Text>
    </View>
  </View>
</View>
`;

exports[`Storyshots QuestionSlider With Default Step 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "paddingHorizontal": 20,
      },
      undefined,
    ]
  }
  testID="question-slider"
>
  <Text
    style={
      Array [
        Object {
          "fontSize": 25,
          "fontWeight": "700",
          "textAlign": "center",
        },
        Object {
          "color": "red",
        },
      ]
    }
    testID="slider-value"
  >
    10
  </Text>
  <RCTSlider
    disabled={false}
    enabled={true}
    maximumValue={100}
    minimumTrackTintColor="red"
    minimumValue={0}
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onSlidingComplete={[Function]}
    onStartShouldSetResponder={[Function]}
    onValueChange={[Function]}
    step={1}
    style={
      Object {
        "height": 40,
      }
    }
    testID="slider"
    value={10}
  />
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-around",
      }
    }
    testID="slider-values-container"
  >
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "flex": 1,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#14171A",
            "fontSize": 15,
            "fontWeight": "500",
            "textAlign": "center",
          }
        }
        testID="slider-min-value"
      >
        0
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flex": 1,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#14171A",
            "fontSize": 15,
            "fontWeight": "500",
            "textAlign": "center",
          }
        }
        testID="slider-max-value"
      >
        100
      </Text>
    </View>
  </View>
</View>
`;
